# QR-SHIELD

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DISCLAIMER.md  ETHICS.md  FAQ.md  INSTALL.md  LICENSE  LICENSE_GUIDE.md  NOTICE  README.md  RESPONSIBLE_DISCLOSURE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  SUPPORTED_VERSIONS.md  THREAT_MODEL.md  USAGE.md  pyproject.toml  qrshield.py  requirements.txt  validate_upgrade.py
.github/: DELIVERABLES_SUMMARY.md  DEPENDENCY_AUDIT_REPORT.md  FUNDING.yml  MODERNIZATION_FINAL_REPORT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  UPGRADE_GUIDE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  security_vulnerability.md
.github/workflows/: codeql.yml  dependencies.yml  docs.yml  lint.yml  tests.yml
core/: Cli.py  Settings.py  __init__.py  app.py  browser.py  color.py  db.py  module.py  module_utils.py  plugin_manager.py  ui.py  utils.py
core/Data/: banners.txt
core/config/: defaults.py  loader.py  models.py
core/modules/grabber/: discord.py  signal.py  telegram.py  whatsapp.py
core/modules/post/: discord.py  signal.py  telegram.py  whatsapp.py
core/registry/: __init__.py  modules.py
core/templates/: phishing_page.html
core/www/discord/: index.html
core/www/signal/: index.html
core/www/telegram/: index.html
core/www/whatsapp/: index.html
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  development-updated-snippets.md  development.md  faq.md  index.md  installation.md  quick-start.md  security.md  threat-model.md  usage.md
docs/images/: README.md
tests/: test_settings.py
tools/: normalize_md.py
