[project]
name = "qr-shield"
version = "1.0.0"
description = "QR Shield: An educational and cybersecurity research framework."
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Puneet Chandra Chaudhary - D0C70R" } ]
license = "LicenseRef-Community-Research-License"
license-files = ["LICENSE", "NOTICE", "COMMERCIAL-LICENSE.md"]
dependencies = [
    "selenium>=4.45.0,<5",
    "urllib3==2.7.0",
    "requests==2.34.2",
    "Pillow>=12.3.0",
    "Jinja2>=3.1.6",
    "user-agent>=0.1.14"
]

[project.scripts]
qrshield = "qrshield:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "ruff>=0.0.262,<1.0.0",
    "black>=26.5.1,<27.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.11.1,<3.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "bandit>=1.9.0,<2.0.0",
]

[tool.setuptools]
py-modules = ["qrshield"]

[tool.setuptools.packages.find]
include = ["core*"]
exclude = ["profiles", "sessions"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | \.env
  | build
  | dist
  | __pycache__
  | \.pytest_cache
  | \.ruff_cache
)/
'''

target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["core"]
src_paths = ["core", "tests", "qrshield.py"]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
exclude = [".git", ".venv", "env", "__pycache__", "build", "dist", ".pytest_cache", ".ruff_cache"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
namespace_packages = true
files = ["core", "tests", "qrshield.py"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"
python_files = ["test_*.py"]
